# MSPM0G3507_LibXR_Template

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
cmake/: LibXR.CMake
src/: app_main.cpp  main.c
sysconfig/: ti_msp_dl_config.c  ti_msp_dl_config.h  untitled.syscfg
